2011-09-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: handle exit statuses > 256 (seen on few korn shells)
	Some Korn shells, when a child process die due to signal number
	n, can leave in $? an exit status of 256+n instead of the more
	standard 128+n.  Apparently, both behaviours are allowed by
	POSIX, so be prepared to handle them both.
	This change has been motivated by a testsuite failure on Debian
	with the AT&T Korn Shell version 93u-1.
	* lib/tap-driver.sh (get_test_exit_message): Handle the described
	Korn Shell behaviour too.
	($scriptversion): Update.

2011-09-24  Stefano Lattarini  <stefano.lattarini@gmail.com>

	uninstall: "make uninstall" before "make install" works
	This change fixes automake bug#9578.
	* lib/am/inst-vars.am (am__uninstall_files_from_dir): New internal
	macro, that defines a shell code fragment to uninstall files from
	a given directory.
	* lib/am/data.am (uninstall-%DIR%%PRIMARY%): Use it, to reduce code
	duplication and improve consistency and correctness.
	* lib/am/libs.am (uninstall-%DIR%LIBRARIES): Likewise.
	* lib/am/lisp.am (uninstall-%DIR%LISP): Likewise.
	* lib/am/mans.am (uninstall-man%SECTION%): Likewise.
	* lib/am/python.am (uninstall-%DIR%LIBRARIES): Likewise.
	* lib/am/scripts.am (uninstall-%DIR%SCRIPTS): Likewise.
	* tests/uninstall-pr9578.test: New test.
	* tests/uninstall-fail.test: New test.
	* tests/Makefile.am (TESTS): Add them.
	* NEWS, THANKS: Update.
	Report by Nick Bowler.

2011-09-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix tests on aclocal search path precedences
	* tests/aclocal-path-precedence.test: Call `$ACLOCAL' with the
	proper overridden system acdir.

2011-09-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: remove mention of deprecated option `--acdir'
	* doc/automake.texi (aclocal Options): Remove mention of
	deprecated `--acdir' option.

2011-09-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	* NEWS: Cleanup after botched merges.
