@@ -1,5 +1,16 @@
 2011-09-28  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tap/awk: account for unusual korn shell signal handling behaviour
+	This change has been motivated by a testsuite failure on Debian
+	with the AT&T Korn Shell version 93u-1.
+	* lib/tap-driver.sh: Temporarily ignore some common signals when
+	waiting for the test command to complete, to avoid premature exit
+	in Korn shells that propagate to themselves signals that have
+	killed a child process.
+	See also related commit `v1.11-1342-g6321ad3'.
+
+2011-09-28  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tap/awk: handle exit statuses > 256 (seen on few korn shells)
 	Some Korn shells, when a child process die due to signal number
 	n, can leave in $? an exit status of 256+n instead of the more
